DuPont DevSB/src/objects/Case_Details__c.object
<CustomObject>
    <description>Trademark Abuse Case Details object is used for storing information related to brand protection cases.</description>
    <fields>
        <fullName>Crop_Phase_Status__c</fullName>
        <label>Crop Phase/Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incident</fullName>
                    <default>true</default>
                    <label>Incident</label>
                </value>
                <value>
                    <fullName>Ph0-DB</fullName>
                </value>
                <value>
                    <fullName>Ph1-Case</fullName>
                </value>
                <value>
                    <fullName>Ph2-Authorities</fullName>
                </value>
                <value>
                    <fullName>Ph3-Investigation</fullName>
                </value>
                <value>
                    <fullName>Ph4-Raid</fullName>
                </value>
                <value>
                    <fullName>Ph5-Criminal</fullName>
                </value>
                <value>
                    <fullName>Ph6-Civil</fullName>
                </value>
                <value>
                    <fullName>Ph7-Legal Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Trademark_is_Used__c</fullName>
        <inlineHelpText>Select how the relevant DuPont trademark is being used by the infringer (E.g., in a Domain Name, on a Label, on a Physical Product, etc.)</inlineHelpText>
        <label>How Trademark is Used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adword/keyword</fullName>
                </value>
                <value>
                    <fullName>Company Name</fullName>
                </value>
                <value>
                    <fullName>Domain Name</fullName>
                </value>
                <value>
                    <fullName>Hidden Text</fullName>
                </value>
                <value>
                    <fullName>Image on Site</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Meta Tag</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physical Product</fullName>
                </value>
                <value>
                    <fullName>Signage</fullName>
                </value>
                <value>
                    <fullName>Text Reference</fullName>
                </value>
                <value>
                    <fullName>Username</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Wikipedia</fullName>
                </value>
                <value>
                    <fullName>Promotional Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedural_Status__c</fullName>
        <inlineHelpText>Indicates status and Function currently responsible</inlineHelpText>
        <label>Procedural Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Protection - In Progress</fullName>
                    <default>true</default>
                    <label>Brand Protection - In Progress</label>
                </value>
                <value>
                    <fullName>Brand Protection - Closed</fullName>
                </value>
                <value>
                    <fullName>Legal - In Progress</fullName>
                </value>
                <value>
                    <fullName>Legal - Suspension</fullName>
                </value>
                <value>
                    <fullName>Legal - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Country__c</fullName>
        <label>Target Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BORNEO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Region__c</fullName>
        <description>(10/12/2017) - Removed all &quot;IF(CONTAINS(&quot;value1:value2:..:valueN&quot;,Country_Text__c),&apos;{ReturnValue}&apos; &quot; conditions as part of remediation effort.</description>
        <formula>&quot;None&quot;</formula>
        <label>Target Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Record__c</fullName>
        <inlineHelpText>Web originates from the Brand Center website.
Lead is new and not fully verified or confirmed.
Case record is fully verified and confirmed requiring management.</inlineHelpText>
        <label>Type of Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fCase_Type__c</fullName>
        <description>Type of case typically referencing the support process to follow</description>
        <formula>TEXT(Related_Case__r.Type)</formula>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <label>Trademark Abuse Case Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Case Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trademark Abuse Case Details</pluralLabel>
    <recordTypes>
        <fullName>BPD_Case_Details</fullName>
        <active>true</active>
        <label>BPD Case Details</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>